--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,15 @@
 <!doctype html>
 <html lang="en">
     <head>
+        <!--        https://stackoverflow.com/questions/61555262/aws-amplify-js-to-angular-app-has-error-global-is-not-defined-->
+        <script>
+            var global = global || window;
+            var Buffer = Buffer || [];
+            var process = process || {
+                env: { DEBUG: undefined },
+                version: []
+            };
+        </script>
         <title>Fuse Angular - Angular Template and Starter Kit</title>
         <meta charset="utf-8">
         <meta
